# yairc

./: .gitignore  Cargo.toml  README.md
server/: Dockerfile  README.md  Vagrantfile  bootstrap.sh  docker-compose.yml  inspircd.conf
server/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
src/: main.rs
src/client/: mod.rs
src/message/: command.rs  mod.rs  param.rs  parser.rs  source.rs
src/registration/: mod.rs
src/util/: mod.rs
