[package]
name = "irc_client"
version = "0.1.0"
authors = ["Jon Grimes <jon.grimes@aptible.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "*"
nom = "6.1.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"